Improved UI. Fix nav bar to top of page so content scrolls behind it. Add hover states for list items. Fix lots of padding bugs in menus. Ensure menu closes when menu item is clicked on.

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -33,12 +33,21 @@
   }
 
 
-/* Data pages */
+/* Main pages */
+
 .topLink{
   padding-top: 14px;
 }
+
+li.navlink a:hover {
+  cursor: pointer; 
+  color: #F2F2F2 !important;
+  background-color: #888 !important
+}
+
+
 .slab {
-  background-color: #ffffff;
+  background-color: #f6f8f8;
   padding:20px;
   box-shadow: 2px 2px 6px #E5E5E4;
 }
@@ -48,21 +57,17 @@
 .footer {
  width: 100%;
 }
-
-/* these are a couple of awful hacks! fix them. */
-.mainDataPage {
-  background-color: white !important;
-}
-.hackwhite, .hackwhite > a {
-  background-color: white !important;
-}
+  .footer a{
+    color: #446DB2;
+  }
 
 .hidden{
   display: none;
 }
 
+/* Styling for overlay when user has no data */
 #overlay {
-    padding-top: 10%;
+    padding-top: 20%;
     background-color: #fff;
     filter:alpha(opacity=80);
     -moz-opacity:0.80;
@@ -73,6 +78,7 @@
     width: 100%;
     height: 100%;
 }
+
 /* blurring the text behind the overlay */
 .blurryText{
   color: rgba(0, 0, 0, 0) !important;
@@ -82,6 +88,15 @@
 #instructions{
   list-style-type: none;
 }
+
+#droplet{
+  height: 46px;
+  padding-top: 16px;
+  -moz-box-sizing: none;
+  -webkit-box-sizing: none;
+  box-sizing: none; 
+}
+
 
 
 /* Styles for screens that are atleast 768px; */
@@ -112,18 +127,4 @@
   }
 }
 
-#droplet{
-  height: 40px;
-  padding-top: 10px;
-  -moz-box-sizing: none;
-  -webkit-box-sizing: none;
-  box-sizing: none; 
-}
 
-.dataPage{
-  background-color: #f9f9f9;
-}
-
-.dataPage-topbar{
-  background-color: #ffffff;
-}
